# score_predictor_private

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: provider_the_odds_api.example.yaml  team_aliases_worldcup_2026.yaml  worldcup_2026_groups.yaml
examples/: match_full_example.yaml  match_input_example.yaml  match_intel_example.yaml  match_research_config.yaml  match_v2_sporttery_manual.yaml  match_v2_with_snapshots.yaml  match_v3_multi_market.yaml  mexico_vs_south_africa_2026.yaml  trusted_sources.yaml
scripts/: fetch_the_odds_api_match.py  predict_worldcup.py  prepare_worldcup_data.py  train_worldcup_model.py
src/score_predictor/: __init__.py  adjustments.py  audit.py  cli.py  data_quality.py  dixon_coles.py  ensemble.py  market_implied.py  odds.py  poisson.py  predictor.py  report.py  schemas.py
src/worldcup/: __init__.py  data.py  features.py  (+4 more)
tests/: test_cli.py  test_cli_full.py  test_cli_v2.py  test_ensemble.py  test_http_client_policy.py  test_intel_adjustments.py  test_lineup_strength.py  test_market_implied.py  test_market_implied_features.py  test_match_context.py  test_narrative_risk.py  test_odds.py  test_odds_movement.py  test_poisson.py  test_prediction_history.py  test_prematch_context.py  test_research_pipeline.py  test_source_policy.py  test_source_whitelist.py  test_sporttery_manual.py  test_sporttery_only_app.py  test_streamlit_ui_helpers.py  test_the_odds_api_connector.py  test_the_odds_api_normalizer.py  test_v3_calibration.py  test_value_analysis.py  test_weather_open_meteo.py  test_worldcup_2026_groups.py  test_worldcup_data.py
(+58 files in other folders)
